--- a/app/views/home/trackchairs.html.erb
+++ b/app/views/home/trackchairs.html.erb
@@ -62,7 +62,7 @@
           </div>
           <div class="row-5 w-row" style="padding: 10px;">
             <div class="w-col w-col-12">
-              <p style="font-size: 14px;">
+              <p style="font-size: 14px; text-align: justify;">
                 Dr Pamsy Hui is the MBA Program Director at the Faculty of Business, the Hong Kong Polytechnic University.  She is the current Chair of the PRME Advisory Committee, as well as the Coordinator for PRME Chapter East Asia.  She teaches leadership, strategic management, and social innovation.  Her current research interests include international management and responsible management education.  Dr Hui obtained her PhD in Organization Science at University of Texas at Austin.  Prior to joining the Hong Kong Polytechnic University, she was a faculty member at Nanyang Technological University in Singapore and Chinese University of Hong Kong.
               </p>
             </div>
@@ -84,7 +84,7 @@ AURO University</h5>
           </div>
           <div class="row-5 w-row" style="padding: 10px;">
             <div class="w-col w-col-12">
-              <p style="font-size: 14px;">
+              <p style="font-size: 14px; text-align: justify;">
                 Prof. Santosh Kumar has been an academic in the area of Politics, Public Policy, Governance and Administration. Having pursued his academics at Jawaharlal Nehru University (JNU), University of Glasgow (on a short term Fellowship from Commonwealth) and Delhi University, his professional career commenced with Tata Institute of Social Sciences, and subsequently, he has been associated with various Universities of national and international repute, in different capacities of academics and administration. Each of these positions involved a combination of research, teaching and policy interventions.  Besides concerning himself as student of public policy, development, etc., he has been engaged with a quest to understand and assimilate pedagogical tools of inter and cross disciplinary perspectives in liberal framework of generating and imparting knowledge. The multiple perspectives from liberal pedagogical frameworks have contributed immensely to understanding of the policy sciences in a non-conventional mode. <br>
 
 As a specialist in the field of Public Policy, he has been engaged with Social Accountability Mechanisms in the Service Delivery Context, Community-based monitoring and evaluations, Decentralization and Good Governance Policies, etc. he has been involved with the public administration structures and have worked on many projects in Poverty Reduction programmes, particularly in South Asia (Bangladesh, Bhutan, Nepal, Sri Lanka, and in India - Maharashtra, Andhra Pradesh, Rajasthan, Tamil Nadu, Chhattisgarh and Madhya Pradesh), with the World Bank, UNDP, ADB and others. <br>
