--- a/app/views/home/workshopdetails.html.erb
+++ b/app/views/home/workshopdetails.html.erb
@@ -53,11 +53,16 @@
           <p>
           	<b> Experiential learning: Towards developing leaders </b> <br>
           	<div style="margin-left: 10px;">
-          		Chair- Dr. Nirja Mattoo <br>
-Chairperson, Centre for Development of Corporate Citizenship (C-DoCC)
-SPJMR
+              <div class="div-block-5">
+              <div class=" w-row">
+              <div class="w-col w-col-2"><img src="../DrNirjaMattoo.jpg" class="image-6" style="border-radius: 50%; height: 120px; width: 120px;"></div>
+              <div class="w-col w-col-4" style="margin-top: 30px;">
+              Chair- Dr. Nirja Mattoo <br>
+              Chairperson, Centre for Development of Corporate Citizenship (C-DoCC)
+              SPJMR
+              </div>
+          	</div></div>
           	</div>
-          	
           	<br>
           	<b>
           		Leveraging PRME for Global Partnerships (in partnership with UN Global Compact)
