--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,11 +51,7 @@
   <div class="div-block-2"></div>
 
   <div class="div-block">
-    <div class="ticker-wrap">
-      <div class="ticker">
-        <div class="ticker__item">ABSTRACT SUBMISSIONS DEADLINE : SEPTEMBER 30</div>
-      </div>
-    </div>
+    
 </div>
     <div class="div-block">
 <!--     <div class="section-4">
@@ -66,7 +62,7 @@
       </div>
     </div> -->
 <div class="section-3">
-      <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease-out" class="navbar-2 w-nav">
+      <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease-out" class="navbar-2 w-nav" >
         <div class="container-3 w-container">
           <nav role="navigation" class="nav-menu-3 w-nav-menu">
           	
@@ -140,7 +136,7 @@
               	<a href="/comingup" class="dropdown-links w-dropdown-link">Keynote Speakers</a>
               	<a href="/comingup" class="dropdown-links w-dropdown-link">Conference Schedules</a>
               	<a href="/comingup" class="dropdown-links w-dropdown-link">Paper Presentation Schedule</a>
-              	<a href="/workshopdetails" class="dropdown-links w-dropdown-link">Details</a>
+              	<a href="/workshopdetails" class="dropdown-links w-dropdown-link">Workshops</a>
               </nav>
             </div>
             <div data-hover="1" data-delay="0" class="w-dropdown">
@@ -169,7 +165,13 @@
             <div class="w-icon-nav-menu"></div>
           </div>
         </div>
+
       </div>
+      <div class="ticker-wrap">
+      <div class="ticker">
+        <div class="ticker__item">ABSTRACT SUBMISSIONS DEADLINE : SEPTEMBER 30</div>
+      </div>
+    </div>
     </div><%= render 'partials/flash' %>
     <%= yield %>
 </div>
