--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -47,7 +47,7 @@
   /*width: 100%;*/
   overflow: hidden;
   height: 2rem;
-  background-color: white;
+  background-color: #F0F0F0;
   padding-left: 100%;
   box-sizing: content-box;
 }
