--- a/app/views/home/org.html.erb
+++ b/app/views/home/org.html.erb
@@ -53,9 +53,10 @@
       <div class="column-6 w-col w-col-6">
         <div class="div-block-5" style="background-color: #f2f2f2">
           <div class="row-4 w-row">
-            <div class="column-7 w-col w-col-9" style="margin-left: 20px;">
-              <h4 class="heading-8" style="text-align: left !important;">Dr. Chandrika Parmar</h4>
-              <h5 class="heading-10" style="text-align: left !important;">Associate Professor, SPJIMR</h5>
+            <div class="w-col w-col-3"><img src="../DrChandrikaParmar.jpg" class="image-6" style="border-radius: 50%; height: 120px; width: 120px;"></div>
+            <div class="column-7 w-col w-col-9" style="margin-top: 20px;">
+              <h4 class="heading-8">Dr. Chandrika Parmar</h4>
+              <h5 class="heading-10">Associate Professor, SPJIMR</h5>
             </div>
           </div>
         </div>
@@ -63,32 +64,35 @@
       <div class="column-5 w-col w-col-6">
         <div class="div-block-5" style="background-color: #f2f2f2">
           <div class="row-5 w-row">
-            <div class="w-col w-col-9" style="margin-left: 20px;">
-              <h4 class="heading-8" style="text-align: left !important;">Prof. Deepa Krishnan</h4>
-              <h5 class="heading-10" style="text-align: left !important;">Head of Abhyudaya, SPJIMR
+            <div class="w-col w-col-3"><img src="../ProfDeepaKrishnan.jpg" class="image-6" style="border-radius: 50%; height: 120px; width: 120px;"></div>
+            <div class="w-col w-col-9" style="margin-top: 20px;">
+              <h4 class="heading-8" >Prof. Deepa Krishnan</h4>
+              <h5 class="heading-10" >Head of Abhyudaya, SPJIMR
               </h5>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="row-3 w-row">
-      <div class="column-6 w-col w-col-6">
+    <div class=" w-row">
+      <div class="column-5 w-col w-col-6">
         <div class="div-block-5" style="background-color: #f2f2f2">
-          <div class="row-4 w-row">
-            <div class="column-7 w-col w-col-9" style="margin-left: 20px;">
-              <h4 class="heading-8" style="text-align: left !important;">Mr. Jagdish Rattanani</h4>
-              <h5 class="heading-10" style="text-align: left !important;">Editor, SPJIMR</h5>
+          <div class=" w-row">
+            <div class="w-col w-col-3"><img src="../ProfJagdishRattanani.jpg" class="image-6" style="border-radius: 50%; height: 120px; width: 120px;"></div>
+            <div class="column-7 w-col w-col-9" style="margin-top: 25px;">
+              <h4 class="heading-8">Mr. Jagdish Rattanani</h4>
+              <h5 class="heading-10">Editor, SPJIMR</h5>
             </div>
           </div>
         </div>
       </div>
       <div class="column-5 w-col w-col-6">
         <div class="div-block-5" style="background-color: #f2f2f2">
-          <div class="row-5 w-row">
-            <div class="w-col w-col-9" style="margin-left: 20px;">
-              <h4 class="heading-8" style="text-align: left !important;">Dr. Nirja Mattoo</h4>
-              <h5 class="heading-10" style="text-align: left !important;">Chairperson of C-DoCC, SPJIMR
+          <div class=" w-row">
+            <div class="w-col w-col-3"><img src="../DrNirjaMattoo.jpg" class="image-6" style="border-radius: 50%; height: 120px; width: 120px;"></div>
+            <div class="column-7 w-col w-col-9" style="margin-top: 25px;">
+              <h4 class="heading-8" >Dr. Nirja Mattoo</h4>
+              <h5 class="heading-10" >Chairperson of C-DoCC, SPJIMR
               </h5>
             </div>
           </div>
