--- a/app/views/home/prme.html.erb
+++ b/app/views/home/prme.html.erb
@@ -49,7 +49,9 @@
 
     <div class="row-7">
         <div class="w-col w-col-3">
+            <a href="http://www.unprme.org/" target="_blank">
             <img src="../UNPRMELogo.png" class="image-6"> 
+            </a>
         </div>
         <div class="w-col w-col-9">
                 <div class="w-container">
