--- a/app/views/home/spjimr.html.erb
+++ b/app/views/home/spjimr.html.erb
@@ -49,7 +49,9 @@
           </div>
     <div class="row-7">
         <div class="w-col w-col-3">
-            <img src="../spjimr.png" class="image-6"> 
+            <a href="http://spjimr.org/" target="_blank">
+                <img src="../spjimr.png" class="image-6"> 
+            </a>
         </div>
         <div class="w-col w-col-9">
     <div class="w-container">
