--- a/app/views/home/unglobal.html.erb
+++ b/app/views/home/unglobal.html.erb
@@ -49,7 +49,9 @@
     </div>
     <div class="row-7">
     	<div class="w-col w-col-3">
-    		<img src="../UNGCLogo.png" class="image-6">	
+            <a href="https://www.unglobalcompact.org/" target="_blank">
+    		  <img src="../UNGCLogo.png" class="image-6">	
+            </a>
     	</div>
     	<div class="w-col w-col-9">
     		<div class="w-container">
