--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -159,6 +159,7 @@
               	<a href="/forum" class="dropdown-links w-dropdown-link">About the Forum</a>
               </nav>
             </div>
+            <a href="/sponsorship" class="nav-link-3 w-nav-link">Sponsorship</a>
             <a href="/contactus" class="nav-link-3 w-nav-link">Contact Us</a>
         </nav>
           <div class="w-nav-button">
