--- a/app/views/home/fees.html.erb
+++ b/app/views/home/fees.html.erb
@@ -166,6 +166,11 @@
               </div>
             </div>
           </div>
+
+          <%= link_to payment_path, class: 'button-3 w-button', style: 'color:black' do %>
+          <span> Pay </span>
+
+          <% end %>
         </div>
       </div>
     </div>
