--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,7 @@
         <div class="w-slider-mask">
           <div class="slide-1 w-slide"></div>
           <div class="slide-5 w-slide">
-            <a href="users/sign_up" class="button" style="position: absolute; top: 63%; left: 47%;  cursor: pointer; opacity: 0">
+            <a href="/tracks" class="button" style="position: absolute; top: 63%; left: 47%;  cursor: pointer; opacity: 0">
               
             </a>
           </div>
