--- a/app/views/home/sponsors.html.erb
+++ b/app/views/home/sponsors.html.erb
@@ -54,7 +54,7 @@
           	 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Sponsors of the PRME Asia Forum would be presented with the unique opportunity to engage with an enterprising audience of academicians from premier business schools across Asia, industrialists from leading corporate houses, social activists from reputed NGOs (Indian Chapters of Foreign NGOs as well as Indian NGOs) and representatives from the Government of India. <br> </p> <p style="text-align: justify; margin-left: 20px;">
           	 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 We work closely with our sponsors to create a near-perfect environment for them to operate in; We deliver on our promise by making the event successful whilst keeping your interests in mind. <br>
-To download the sponsorship proposal, click here  ( here you need to provide the link of the sponsorship proposal file uploaded)
+<p style="text-align: center"> To download the sponsorship proposal, <a href="../sponsor.pdf" style="color: blue" download>click here</a>  </p>
           
           </p>
           </div></div>
