--- a/public/spjain.css
+++ b/public/spjain.css
@@ -1130,12 +1130,12 @@ figcaption {
 
 .dropdwon-toggle {
   margin-top: -13px;
-  padding: 6px 21px 6px 10px;
-  border-right: 1px solid #fff;
+  padding: 6px 24px 6px 12px;
+  border-right: 1px solid #696969;
   background-color: #333a56;
   
   color: #fff;
-  font-size: 13px;
+  font-size: 14px;
 }
 
 .dropdwon-toggle.w--open {
@@ -1177,12 +1177,12 @@ figcaption {
 
 .nav-link-3 {
   margin-top: -16px;
-  padding: 10px 5px 8px 6px;  
-  border-right: 1px solid #fff;
+  padding: 10px 9px 8px 10px;  
+  border-right: 1px solid #696969;
   background-color: #333a56;
   
   color: #fff;
-  font-size: 13px;
+  font-size: 14px;
 }
 
 .nav-link-3:hover {
