--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,23 +52,12 @@
   </div>
   <div class="div-block-2"></div>
 
-  <div class="div-block">
-    
-</div>
-    <div class="div-block">
-<!--     <div class="section-4">
-      <div class="row w-row">
-        <div class="w-col w-col-4"><img src="../UNGC Logo.png" height="80" class="image-4"></div>
-        <div class="w-col w-col-4"><img src="../UNPRME Logo.png" height="80" class="image-4"></div>
-        <div class="column w-clearfix w-col w-col-4"><img src="../spjimr.png" class="image-3"></div>
-      </div>
-    </div> -->
-<div class="section-3">
-      <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease-out" class="navbar-2 w-nav" >
+  <div class="div-block" style="background-color: #333a56">
+          <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease-out" class="navbar-2 w-nav" >
         <div class="container-3 w-container">
           <nav role="navigation" class="nav-menu-3 w-nav-menu">
-          	
-          	<a href="/" class="nav-link-3 w-nav-link activate-check">
+            
+            <a href="/" class="nav-link-3 w-nav-link activate-check">
                  <i class="fa fa-home w3-xxxlarge" style="font-size: 18px !important;"></i>
                 </a>
             <div data-hover="1" data-delay="0" class="w-dropdown">
@@ -88,9 +77,9 @@
                 <div>Leadership</div>
               </div>
               <nav class="w-dropdown-list">
-              	
-              	<%= link_to "External Advisory Committee", eac_path, :class => "dropdown-links w-dropdown-link" %>
-              	<a href="/organizingcomittee" class="dropdown-links w-dropdown-link">Organizing Committee</a>
+                
+                <%= link_to "External Advisory Committee", eac_path, :class => "dropdown-links w-dropdown-link" %>
+                <a href="/organizingcomittee" class="dropdown-links w-dropdown-link">Organizing Committee</a>
               </nav>
             </div>
             <div data-hover="1" data-delay="0" class="w-dropdown">
@@ -125,9 +114,9 @@
                 <div>Doctoral Colloquium</div>
               </div>
               <nav class="w-dropdown-list">
-              	<a href="/details" class="dropdown-links w-dropdown-link">Colloquium Details</a>
-              	<a href="/application" class="dropdown-links w-dropdown-link">Applications</a>
-              	<%= link_to "Co-Chairs", cochair_path, :class => "dropdown-links w-dropdown-link" %>
+                <a href="/details" class="dropdown-links w-dropdown-link">Colloquium Details</a>
+                <a href="/application" class="dropdown-links w-dropdown-link">Applications</a>
+                <%= link_to "Co-Chairs", cochair_path, :class => "dropdown-links w-dropdown-link" %>
               </nav>
             </div>
             <div data-hover="1" data-delay="0" class="w-dropdown">
@@ -136,10 +125,10 @@
                 <div>Program Schedule</div>
               </div>
               <nav class="w-dropdown-list">
-              	<a href="/comingup" class="dropdown-links w-dropdown-link">Keynote Speakers</a>
-              	<a href="/comingup" class="dropdown-links w-dropdown-link">Conference Schedules</a>
-              	<a href="/comingup" class="dropdown-links w-dropdown-link">Paper Presentation Schedule</a>
-              	<a href="/workshopdetails" class="dropdown-links w-dropdown-link">Workshops</a>
+                <a href="/comingup" class="dropdown-links w-dropdown-link">Keynote Speakers</a>
+                <a href="/comingup" class="dropdown-links w-dropdown-link">Conference Schedules</a>
+                <a href="/comingup" class="dropdown-links w-dropdown-link">Paper Presentation Schedule</a>
+                <a href="/workshopdetails" class="dropdown-links w-dropdown-link">Workshops</a>
               </nav>
             </div>
             <div data-hover="1" data-delay="0" class="w-dropdown">
@@ -148,8 +137,8 @@
                 <div>Accomodations</div>
               </div>
               <nav class="w-dropdown-list">
-              	<a href="/comingup" class="dropdown-links w-dropdown-link">Campus</a>
-              	<a href="/comingup" class="dropdown-links w-dropdown-link">Hotels in Mumbai</a>
+                <a href="/comingup" class="dropdown-links w-dropdown-link">Campus</a>
+                <a href="/comingup" class="dropdown-links w-dropdown-link">Hotels in Mumbai</a>
               </nav>
             </div>
             
@@ -159,7 +148,7 @@
                 <div>Forum</div>
               </div>
               <nav class="w-dropdown-list">
-              	<a href="/forum" class="dropdown-links w-dropdown-link">About the Forum</a>
+                <a href="/forum" class="dropdown-links w-dropdown-link">About the Forum</a>
               </nav>
             </div>
             <a href="/sponsorship" class="nav-link-3 w-nav-link">Sponsorship</a>
@@ -171,6 +160,16 @@
         </div>
 
       </div>
+</div>
+    <div class="div-block">
+<!--     <div class="section-4">
+      <div class="row w-row">
+        <div class="w-col w-col-4"><img src="../UNGC Logo.png" height="80" class="image-4"></div>
+        <div class="w-col w-col-4"><img src="../UNPRME Logo.png" height="80" class="image-4"></div>
+        <div class="column w-clearfix w-col w-col-4"><img src="../spjimr.png" class="image-3"></div>
+      </div>
+    </div> -->
+<div class="section-3">
       <div class="ticker-wrap">
       <div class="ticker">
         <div class="ticker__item">ABSTRACT SUBMISSIONS DEADLINE : SEPTEMBER 30</div>
