--- a/app/views/home/sponsors.html.erb
+++ b/app/views/home/sponsors.html.erb
@@ -48,16 +48,24 @@
         <h2 class="" style="margin: 30px 0px 30px 0px">Sponsorship</h2>
     </div>
     
-          <div class="row">
-      <div class="card" style="padding: 10px; text-align: justify;">
+          <div class="row-7">
+        <div class="w-col w-col-3">
+            <a href="http://spjimr.org/" target="_blank">
+                <img src="../get-money.png" class="image-6" style="    height: 200px;
+    width: 300px;
+    margin-top: -40px;"> 
+            </a>
+        </div>
+        <div class="w-col w-col-9">
+      <div class="w-container" style="padding: 10px; text-align: justify;">
           <p style="text-align: justify; margin-left: 20px;">
           	 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Sponsors of the PRME Asia Forum would be presented with the unique opportunity to engage with an enterprising audience of academicians from premier business schools across Asia, industrialists from leading corporate houses, social activists from reputed NGOs (Indian Chapters of Foreign NGOs as well as Indian NGOs) and representatives from the Government of India. <br> </p> <p style="text-align: justify; margin-left: 20px;">
           	 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 We work closely with our sponsors to create a near-perfect environment for them to operate in; We deliver on our promise by making the event successful whilst keeping your interests in mind. <br>
-<p style="text-align: center"> To download the sponsorship proposal, <a href="../sponsor.pdf" style="color: blue" download>click here</a>  </p>
+<p style="margin-left: 250px;"> To download the sponsorship proposal, <a href="../sponsor.pdf" style="color: blue" download>click here</a>  </p>
           
           </p>
-          </div></div>
+          </div></div></div>
 
 </div>
 
