--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,8 +57,8 @@
         <div class="container-3 w-container">
           <nav role="navigation" class="nav-menu-3 w-nav-menu">
             
-            <a href="/" class="nav-link-3 w-nav-link activate-check">
-                 <i class="fa fa-home w3-xxxlarge" style="font-size: 18px !important;"></i>
+            <a href="/" class="nav-link-3 w-nav-link activate-check" style="border-left:1px solid #696969;">
+                 <i class="fa fa-home w3-xxxlarge" style="font-size: 18px !important; "></i>
                 </a>
             <div data-hover="1" data-delay="0" class="w-dropdown">
               <div class="dropdwon-toggle w-dropdown-toggle">
