--- a/app/views/home/org.html.erb
+++ b/app/views/home/org.html.erb
@@ -64,7 +64,7 @@
       <div class="column-5 w-col w-col-6">
         <div class="div-block-5" style="background-color: #f2f2f2">
           <div class="row-5 w-row">
-            <div class="w-col w-col-3"><img src="../ProfDeepaKrishnan.jpg" class="image-6" style="border-radius: 50%; height: 120px; width: 120px;"></div>
+            <div class="w-col w-col-3"><img src="../ProfDeepaKrishnan.JPG" class="image-6" style="border-radius: 50%; height: 120px; width: 120px;"></div>
             <div class="w-col w-col-9" style="margin-top: 20px;">
               <h4 class="heading-8" >Prof. Deepa Krishnan</h4>
               <h5 class="heading-10" >Head of Abhyudaya, SPJIMR
@@ -78,7 +78,7 @@
       <div class="column-5 w-col w-col-6">
         <div class="div-block-5" style="background-color: #f2f2f2">
           <div class=" w-row">
-            <div class="w-col w-col-3"><img src="../ProfJagdishRattanani.jpg" class="image-6" style="border-radius: 50%; height: 120px; width: 120px;"></div>
+            <div class="w-col w-col-3"><img src="../ProfJagdishRattanani.JPG" class="image-6" style="border-radius: 50%; height: 120px; width: 120px;"></div>
             <div class="column-7 w-col w-col-9" style="margin-top: 25px;">
               <h4 class="heading-8">Mr. Jagdish Rattanani</h4>
               <h5 class="heading-10">Editor, SPJIMR</h5>
@@ -89,7 +89,7 @@
       <div class="column-5 w-col w-col-6">
         <div class="div-block-5" style="background-color: #f2f2f2">
           <div class=" w-row">
-            <div class="w-col w-col-3"><img src="../DrNirjaMattoo.jpg" class="image-6" style="border-radius: 50%; height: 120px; width: 120px;"></div>
+            <div class="w-col w-col-3"><img src="../DrNirjaMattoo.JPG" class="image-6" style="border-radius: 50%; height: 120px; width: 120px;"></div>
             <div class="column-7 w-col w-col-9" style="margin-top: 25px;">
               <h4 class="heading-8" >Dr. Nirja Mattoo</h4>
               <h5 class="heading-10" >Chairperson of C-DoCC, SPJIMR
